# genesis-lenia

./: .gitignore  README.md  pyproject.toml
docs/: CAPSTONE.md  STATUS.md  progress.md
genesis/: __init__.py  baldwin.py  communicate.py  communicate_comp.py  communicate_grounded.py  communicate_iterate.py  cooperation.py  coordinate.py  creature3d.py  creature_flow.py  cumulative_culture.py  ecology.py  embodied_learning.py  embodied_memory.py  evo_ecology.py  evo_learning.py  evolve.py  evolve3d.py  flowlenia.py  flowlenia_mc.py  foraging.py  learning.py  measure.py  memory_brain.py  metrics.py  open_ended.py  openended.py  openmind.py  overview.py  planning.py  predict_brain.py  predprey.py  run11.py  run12.py  run13.py  run14.py  run15.py  run16.py  run18.py  run19.py  (+34 more)
outputs/: round11_embodied.json  round12_measure.json  round13_selection.json  round14_baldwin.json  round15_memory.json  round16_predict.json  round18_embodied_memory.json  round19_planning.json  round1_genome_locomotion.json  round1_genome_selforg.json  round21_unified.json  round22_openended.json  round24_openmind.json  round25_creature.json  round27_flowlenia.json  round28_flowcreature.json  round29_multichannel.json  round2_genome.json  round30_communication.json  round31_compositional.json  round33_grounded.json  round34_iterated.json  round35_theory_of_mind.json  round37_coordination.json  round38_tom_obstacle.json  round3_forager.json  round40_unified_social.json  round41_cumulative.json  round43_open_ended.json  round44_symmetry_break.json  round46_cooperation.json  round4_survivor.json  (+5 more)
(+35 files in other folders)
